# ReverseProxyGUI

./: LICENSE  README.md  package.json
.cursor/: rules
.github/: copilot-instructions.md
app/: error.tsx  layout.tsx  loading.tsx  page.tsx
components/: app-sidebar.tsx  proxy-form.tsx
components/ui/: alert-dialog.tsx  badge.tsx
hooks/: use-proxy-status.ts
lib/: proxy-api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  proxy_manager.rs
types/: proxy.ts
