[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2.6.0"
tauri-plugin-store = "2.3.0"
axum = { version = "0.7", features = ["http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = { version = "1.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
hyper-tls = "0.6"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
url = "2.5.4"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
